--- a/functions/package.json
+++ b/functions/package.json
@@ -17,12 +17,20 @@
   "main": "lib/index.js",
   "dependencies": {
     "algoliasearch": "^4.9.1",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
+    "date-and-time": "^1.0.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "slack-notify": "^0.1.7"
   },
   "devDependencies": {
     "@types/algoliasearch": "^4.0.0",
+    "@types/cors": "^2.8.10",
+    "@types/date-and-time": "^0.13.0",
     "@types/express": "^4.17.11",
     "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
