--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "pushy": "^2.0.10",
+    "pushy-node": "^1.0.11",
     "slack-notify": "^0.1.7"
   },
   "devDependencies": {
