--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@mailchimp/mailchimp_transactional": "^1.0.27",
     "algoliasearch": "^4.9.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -23,17 +24,22 @@
     "cryptr": "^6.0.2",
     "date-and-time": "^1.0.1",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "nodemailer": "^6.6.2",
+    "nodemailer-mandrill-transport": "^1.2.0",
     "pushy": "^2.0.10",
     "pushy-node": "^1.0.11",
-    "slack-notify": "^0.1.7"
+    "slack-notify": "^0.1.7",
+    "twilio": "^3.64.0"
   },
   "devDependencies": {
     "@types/algoliasearch": "^4.0.0",
     "@types/cors": "^2.8.10",
     "@types/date-and-time": "^0.13.0",
     "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^5.3.0",
     "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
